--- a/charts/konnectivity/values.yaml
+++ b/charts/konnectivity/values.yaml
@@ -34,7 +34,7 @@ applications:
           imagePullPolicy: IfNotPresent
           entryPoint:
             command:
-              - "proxy-server"
+              - "/proxy-server"
             args:
               - --logtostderr=true
               - --server-id=$(POD_NAME)
@@ -44,7 +44,7 @@ applications:
               - --cluster-key=/pki/apiserver/tls.key
               - --log-file=/var/log/konnectivity-server.log
               - --log-file-max-size=0
-              - --uds-name=/etc/srv/kubernetes/konnectivity-server/konnectivity-server.socket
+              # - --uds-name=/etc/srv/kubernetes/konnectivity-server/konnectivity-server.socket
               - --keepalive-time=1h
 
           envs: 
@@ -74,7 +74,7 @@ applications:
               name: kubeconfig
               readOnly: true
             - mountPath: /pki/apiserver
-              name: pki-apiserver
+              name: pki-kube-apiserver-server
           resources:
             requests:
               cpu: 100m
@@ -82,8 +82,8 @@ applications:
     
       volumes:
         - secret:
-            secretName: "pki-apiserver-server"
-          name: pki-apiserver
+            secretName: "pki-kube-apiserver-server"
+          name: pki-kube-apiserver-server
 
       strategy:
         type: RollingUpdate
