fix livenes probe for kube-apiserver and fix certs for konnectivity

--- a/charts/kube-apiserver/service.yaml
+++ b/charts/kube-apiserver/service.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app.kubernetes.io/instance: kube-apiserver
     app.kubernetes.io/name: kube-apiserver
-  name: kubernetes-apiserver
+  name: kube-apiserver-svc
 spec:
   ipFamilies:
     - IPv4
