--- a/charts/kube-apiserver/templates/deployment.yaml
+++ b/charts/kube-apiserver/templates/deployment.yaml
@@ -84,10 +84,10 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           args:
-            - --proxy-client-cert-file=/pki/pki-{{ $baseName }}-front-proxy-client/tls.crt
-            - --proxy-client-key-file=/pki/pki-{{ $baseName }}-front-proxy-client/tls.key
-            - --requestheader-allowed-names=pki-{{ $baseName }}-front-proxy-client
-            - --requestheader-client-ca-file=/pki/pki-{{ $baseName }}-front-proxy-client/ca.crt
+            - --proxy-client-cert-file=/pki/pki-{{ $baseName }}-proxy-client/tls.crt
+            - --proxy-client-key-file=/pki/pki-{{ $baseName }}-proxy-client/tls.key
+            - --requestheader-allowed-names={{ $baseName }}-proxy-client
+            - --requestheader-client-ca-file=/pki/pki-{{ $baseName }}-proxy-client/ca.crt
             - --tls-cert-file=/pki/pki-{{ $baseName }}-server/tls.crt
             - --tls-private-key-file=/pki/pki-{{ $baseName }}-server/tls.key
             - --client-ca-file=/pki/pki-{{ $baseName }}-server/ca.crt
@@ -138,8 +138,8 @@ spec:
           {{- end }}
 
           volumeMounts:
-            - mountPath: /pki/pki-{{ $baseName }}-front-proxy-client
-              name: pki-{{ $baseName }}-front-proxy-client
+            - mountPath: /pki/pki-{{ $baseName }}-proxy-client
+              name: pki-{{ $baseName }}-proxy-client
             - mountPath: /pki/pki-{{ $baseName }}-server
               name: pki-{{ $baseName }}-server
             - mountPath: /pki/pki-{{ $baseName }}-etcd-client
@@ -152,8 +152,8 @@ spec:
       {{- end }}
       volumes:
         - secret:
-            secretName: "pki-{{ $baseName }}-front-proxy-client"
-          name: pki-{{ $baseName }}-front-proxy-client
+            secretName: "pki-{{ $baseName }}-proxy-client"
+          name: pki-{{ $baseName }}-proxy-client
         - secret:
             secretName: "pki-{{ $baseName }}-server"
           name: pki-{{ $baseName }}-server
