--- a/charts/kube-controller-manager/values.yaml
+++ b/charts/kube-controller-manager/values.yaml
@@ -51,19 +51,16 @@ applications:
               - --node-monitor-grace-period=16s
               - --pod-eviction-timeout=30s
               - --leader-elect=true
-          envs:
-            - name: SVC_NAME
-              value: etcd
           livenessProbe:
             failureThreshold: 8
             httpGet:
               path: /healthz
-              port: 10257
+              port: client
               scheme: HTTPS
             initialDelaySeconds: 15
             timeoutSeconds: 15
           ports:
-            - containerPort: 6443
+            - containerPort: 10257
               name: client
           volumeMounts:
             - mountPath: /etc/kubernetes/
