--- a/charts/kube-controller-manager/values.yaml
+++ b/charts/kube-controller-manager/values.yaml
@@ -52,6 +52,7 @@ applications:
               - --node-monitor-grace-period=16s
               - --pod-eviction-timeout=30s
               - --leader-elect=true
+              - --v=2
           livenessProbe:
             failureThreshold: 8
             httpGet:
@@ -78,6 +79,9 @@ applications:
               cpu: 100m
               memory: 128Mi
       volumes:
+        - configMap:
+            name: "kubeconfig"
+          name: kubeconfig
         - secret:
             secretName: "pki-ca"
           name: pki-ca
