Да здравствует куча мала

--- a/.helmignore
+++ b/.helmignore
@@ -22,8 +22,10 @@
 *.tmproj
 .vscode/
 charts/main
-charts/kube-apiserver/templates/service.yaml
 charts/kube-controller-manager/templates/service.yaml
 charts/addons/charts/metric-server
 charts/addons/charts/konnectivity-client
 charts/addons/charts/kube-state-metrics
+charts/kubeadm
+#charts/konnectivity
+charts/addons/charts/prometheus-adapter
