--- a/charts/addons/charts/certmanager/templates/deployment-webhook.yaml
+++ b/charts/addons/charts/certmanager/templates/deployment-webhook.yaml
@@ -50,7 +50,7 @@ spec:
         - name: pki-kubeconfig-client
           secret:
             defaultMode: 420
-            secretName: pki-cert-manager-admin-client
+            secretName: pki-cert-manager-client
         - name: pki-cert-manager-webhook
           secret:
             defaultMode: 420
