--- a/charts/etcd/values.yaml
+++ b/charts/etcd/values.yaml
@@ -36,7 +36,7 @@ applications:
       containers:
         etcd:
           name: etcd
-          image: "k8s.gcr.io/etcd:3.4.13-0"
+          image: "k8s.gcr.io/etcd:3.5.2"
           imagePullPolicy: IfNotPresent
           entryPoint:
             command:
